--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,5 @@ body {
 }
 
 .txt-stroke{
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px white;
+  text-shadow:3px 3px #EE5876 ;
 }
